feat: firebase notification topic
