# docs/swagger.yaml
@@ -67,10 +67,12 @@ definitions:
         type: object
       title:
         type: string
+      topic_id:
+        type: string
+      topic_name:
+        type: string
       user_id:
         type: string
-    required:
-    - user_id
     type: object
   request.SubscribeNotificationTopicRequest:
     properties:
@@ -243,6 +245,49 @@ paths:
       tags:
       - Device Token API
   /notification-topics:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of notification topics
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Number of items per page
+        in: query
+        name: page_size
+        type: integer
+      - description: Sort by field
+        in: query
+        name: sort
+        type: string
+      - description: Order (asc or desc)
+        in: query
+        name: order
+        type: string
+      - description: Search term
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      summary: Get notification topics
+      tags:
+      - Notification Topic API
     post:
       consumes:
       - application/json
@@ -300,6 +345,36 @@ paths:
           schema:
             $ref: '#/definitions/response.ApiResponse'
       summary: Subscribe to a notification topic
+      tags:
+      - Notification Topic API
+  /notification-topics/unsubscribe:
+    post:
+      consumes:
+      - application/json
+      description: Unsubscribe a device from a notification topic
+      parameters:
+      - description: Subscription Info
+        in: body
+        name: subscription
+        required: true
+        schema:
+          $ref: '#/definitions/request.SubscribeNotificationTopicRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      summary: Unsubscribe from a notification topic
       tags:
       - Notification Topic API
   /notifications:
